--- a/Topics/Interface/Mutable geometric shapes/task.html
+++ b/Topics/Interface/Mutable geometric shapes/task.html
@@ -15,7 +15,7 @@
      <li><code class="language-java">move</code> should add <code class="language-java">dx</code> and <code class="language-java">dy</code> to the upper-left corner of a rectangle.</li> 
     </ul> </li> 
   </ol> 
-  <p>See the provided code and read comments to understand your task better. Now the code is not compiled.</p> 
+  <p>See the provided code and read comments to understand your task better. The code is not compiled.</p> 
   <p><strong>Note:</strong></p> 
   <ul> 
    <li>do not remove existing classes and their members (including getters and constructors).</li> 
